--- a/win/iOS/NetHack/NetHack-Info.plist
+++ b/win/iOS/NetHack/NetHack-Info.plist
@@ -37,5 +37,7 @@
 	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>MainStoryboard</string>
+	<key>UIStatusBarHidden</key>
+	<true/>
 </dict>
 </plist>
