--- a/sys/unix/Makefile.utl
+++ b/sys/unix/Makefile.utl
@@ -89,8 +89,9 @@
 # flags for debugging:
 # CFLAGS = -g -I../include
 
-CFLAGS = -O -I../include
-LFLAGS =
+# iOS force compiler and linker to 32 bit model
+CFLAGS = -m32 -O -I../include
+LFLAGS = -m32
 
 LIBS =
  
